--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,11 +10,13 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<nav>
+        <nav>
             <a href="/">Home</a>
             <a href="/about/">About</a>
-			<a href="/blog/">Blog</a>
+            <a href="/blog/">Blog</a>
         </nav>
-		<h1>My Astro Site</h1>
+		<h1>About Me</h1>
+        <h2>...and my new Astro site</h2>
+        <p>Is this thing on?</p>
 	</body>
 </html>
