--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,11 +10,13 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<nav>
+        <nav>
             <a href="/">Home</a>
             <a href="/about/">About</a>
 			<a href="/blog/">Blog</a>
         </nav>
-		<h1>My Astro Site</h1>
+		<h1>Blog</h1>
+		<h2>My Musings</h2>
+        <p>Blog contents goes here</p>
 	</body>
 </html>
