--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css';
 const pageTitle = "About Me";
 
 const identity = {
@@ -9,6 +10,10 @@ const identity = {
 };
 
 const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
+// skill styles
+const skillColor = "navy";
+const fontWeight = "bold";
+const textTransform = "uppercase";
 
 const happy = true;
 const finished = false;
@@ -22,6 +27,18 @@ const goal = 3;
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>{pageTitle}</title>
+        <style define:vars={{skillColor, fontWeight, textTransform}}>
+            h1 {
+              color: purple;
+              font-size: 4rem;
+            }
+
+            .skill {
+                color: var(--skillColor);
+                font-weight: var(--fontWeight);
+                text-transform: var(--textTransform);
+            }
+        </style>
     </head>
     <body>
         <nav>
@@ -49,7 +66,7 @@ const goal = 3;
         </ul>
         <p>My skills are:</p>
         <ul>
-            {skills.map((skill) => <li>{skill}</li>)}
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
         {happy && <p>I am happy to be learning Astro!</p>}
         {finished && <p>I finished this tutorial</p>}
