--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css';
 const pageTitle = "Home Page";
 ---
 
@@ -17,5 +18,6 @@ const pageTitle = "Home Page";
 			<a href="/blog/">Blog</a>
         </nav>
 		<h1>{pageTitle}</h1>
+		<p>Welcome to my Astro site.</p>
 	</body>
 </html>
