--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/global.css';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "About Me";
 
 const identity = {
@@ -41,12 +43,7 @@ const goal = 3;
         </style>
     </head>
     <body>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/about/">About</a>
-            <a href="/blog/">Blog</a>
-        </nav>
-        <h1>{pageTitle}</h1>
+        <Header pageTitle={pageTitle} />
         <p>Here are a few facts about me:</p>
         <ul>
             <li>My name is {identity.firstName}.</li>
@@ -71,5 +68,6 @@ const goal = 3;
         {happy && <p>I am happy to be learning Astro!</p>}
         {finished && <p>I finished this tutorial</p>}
         {goal === 3 ? <p>My goal is to finish in 3 days!</p> : <p>My goal is not 3 days away.</p>}
+        <Footer />
     </body>
 </html>
