--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/global.css';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "My Astro Blog";
 ---
 
@@ -12,17 +14,13 @@ const pageTitle = "My Astro Blog";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/about/">About</a>
-			<a href="/blog/">Blog</a>
-        </nav>
-		<h1>{pageTitle}</h1>
+        <Header pageTitle={pageTitle} />
 		<h2>My Musings</h2>
         <ul>
 			<li><a href="/posts/post-1/">Post 1</a></li>
 			<li><a href="/posts/post-2/">Post 2</a></li>
 			<li><a href="/posts/post-3/">Post 3</a></li>
 		</ul>
+		<Footer />
 	</body>
 </html>
