--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import '../styles/global.css';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 const pageTitle = "Home Page";
 ---
 
@@ -12,12 +14,8 @@ const pageTitle = "Home Page";
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<nav>
-            <a href="/">Home</a>
-            <a href="/about/">About</a>
-			<a href="/blog/">Blog</a>
-        </nav>
-		<h1>{pageTitle}</h1>
+		<Header pageTitle={pageTitle} />
 		<p>Welcome to my Astro site.</p>
+		<Footer />
 	</body>
 </html>
