--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,5 +17,8 @@ const pageTitle = "Home Page";
 		<Header pageTitle={pageTitle} />
 		<p>Welcome to my Astro site.</p>
 		<Footer />
+		<script>
+			import '../scripts/menu';
+		</script>
 	</body>
 </html>
