--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,10 @@
 ---
+import Hamburger from "./Hamburger.astro";
 import Navigation from "./Navigation.astro";
 const { pageTitle } = Astro.props;
 ---
 <header>
+    <Hamburger />
     <Navigation />
 	<h1>{pageTitle}</h1>
 </header>
