--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -69,5 +69,8 @@ const goal = 3;
         {finished && <p>I finished this tutorial</p>}
         {goal === 3 ? <p>My goal is to finish in 3 days!</p> : <p>My goal is not 3 days away.</p>}
         <Footer />
+        <script>
+			import '../scripts/menu';
+		</script>
     </body>
 </html>
