--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,4 +1,6 @@
 ---
+import BaseLayout from "./BaseLayout.astro";
+
 const { frontmatter } = Astro.props;
 ---
 <style>
@@ -17,8 +19,9 @@ const { frontmatter } = Astro.props;
         margin-right: 0.5rem;
     }
 </style>
-<h1>{frontmatter.title}</h1>
+<BaseLayout pageTitle={frontmatter.title}>
 <p class="publish-details">Written by {frontmatter.author} on {frontmatter.pubDate.slice(0, 10)}</p>
 <p><strong>Tags:</strong> {frontmatter.tags.map((tag: string) => <span class="tag">{tag}</span>)}</p>
 <img src={frontmatter.image.url} alt={frontmatter.image.alt} />
 <slot />
+</BaseLayout>
