--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -5,23 +5,30 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
 export async function getStaticPaths() {
     const allPosts = await Astro.glob('../posts/*.md');
 
-    return [
-    { params: { tag: "astro" } , props: { posts: allPosts} },
-    { params: { tag: "successes" }, props: { posts: allPosts } },
-    { params: { tag: "community" }, props: { posts: allPosts } },
-    { params: { tag: "blogging" }, props: { posts: allPosts } },
-    { params: { tag: "setbacks" }, props: { posts: allPosts } },
-    { params: { tag: "learning in public" }, props: { posts: allPosts } },
-  ];
+    const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())]
+    return uniqueTags.map((tag) => {
+        const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
+        return {
+            params: { tag },
+            props: { posts: filteredPosts }
+        };
+    });
 }
 
 const { tag } = Astro.params;
 const { posts } = Astro.props;
-const filteredPosts = posts.filter((post) => post.frontmatter.tags.includes(tag));
+const pageTitle = `Tag: ${tag}`;
 ---
-<BaseLayout pageTitle={tag}>
-  <p>Posts tagged with {tag}</p>
+<style>
+    .tag {
+        font-family: monospace;
+        background-color: lightgray;
+        margin-right: 0.5rem;
+    }
+</style>
+<BaseLayout pageTitle={pageTitle}>
+  <p>Posts tagged with <span class="tag">{tag}</span></p>
   <ul>
-    {filteredPosts.map((post) => <BlogEntry url={post.url} frontmatter={post.frontmatter} />)}
+    {posts.map((post) => <BlogEntry url={post.url} frontmatter={post.frontmatter} />)}
   </ul>
 </BaseLayout>
