--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -2,6 +2,7 @@
 import BaseLayout from "./BaseLayout.astro";
 
 const { frontmatter } = Astro.props;
+const { tags } = frontmatter;
 ---
 <style>
     /* for some reason this isn't working */
@@ -13,19 +14,37 @@ const { frontmatter } = Astro.props;
         font-style: italic;
     }
 
-    .tag {
-        font-family: monospace;
-        background-color: lightgray;
-        margin-right: 0.5rem;
-    }
-
     img {
         width: 100%;
+    }
+
+    /* tag styles */
+    a {
+        color: #00539F;
+    }
+
+    .tags {
+        display: flex; 
+        flex-wrap: wrap; 
+        margin: 0.5rem auto;  
+    }
+
+    .tag {
+        margin: 0.25em;
+        border: dotted 1px #a1a1a1;
+        border-radius: .5em;
+        padding: .5em 1em;
+        font-size: 1.15em;
+        background-color: #F8FCFD;
     }
 </style>
 <BaseLayout pageTitle={frontmatter.title}>
 <p class="publish-details">Written by {frontmatter.author} on {frontmatter.pubDate.slice(0, 10)}</p>
-<p><strong>Tags:</strong> {frontmatter.tags.map((tag: string) => <span class="tag">{tag}</span>)}</p>
+<div class="tags">
+    {tags.map((tag) => (
+      <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>
+    ))}
+</div>
 <img src={frontmatter.image.url} alt={frontmatter.image.alt} />
 <slot />
 </BaseLayout>
