--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,12 @@
 ---
 import Hamburger from "./Hamburger.astro";
 import Navigation from "./Navigation.astro";
+import ThemeIcon from "./ThemeIcon.astro";
 const { pageTitle } = Astro.props;
 ---
 <header>
     <Hamburger />
+    <ThemeIcon />
     <Navigation />
 	<h1>{pageTitle}</h1>
 </header>
