--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Greeting from '../components/Gretting';
 const pageTitle = "Home Page";
 ---
 <BaseLayout pageTitle={pageTitle}>
-  <h2>WIP</h2>
+  <Greeting client:load messages={["Hello", "Hej", "Hallo", "Hola", "Habari"]} />
 </BaseLayout>
